# kded_android-receiver

./: CMakeLists.txt  README.md  kandroid-receiver.cpp  kandroid-receiver.desktop  kandroid-receiver.h  kandroid-receiver.notifyrc  main.cpp
